# Typoglycemizer

./: CMakeLists.txt  README.md  main.cpp  standalone.cpp  to-do.md  typoglycemia.cpp  typoglycemia.h
